--- a/index.html
+++ b/index.html
@@ -28,12 +28,61 @@
     <main>
     <!-- SECTION HERO -->
     <section class="hero">
-        <div>
+        <div class="container top100">
             <h1>Rendez votre maison unique</h1>
             <p>Nous croyons que chaque espace a le potentiel d'être exceptionnel</p>
-            <a href="">Construisez votre projet ➜</a>
+            <a href="" class="btn">Construisez votre projet ➜</a>
         </div>
     </section>
+
+    <section class="flex spaceBetween container top100">
+        <!-- SECTION HERO -->
+        <div class="box">
+            <h3 class="top20">vision</h3>
+            <p>Notre processus commence par
+                comprendre votre vision. Nous
+                écoutons attentivement vos idées, vos
+                rêves et vos besoins pour créer un
+                design qui vous correspond.</p>
+    </div>
+
+    <div class="box">
+        <h3 class="top20">Créativité</h3> 
+        <p>Notre équipe de designers explore
+            des concepts uniques pour chaque
+            projet, en veillant à ce que chaque
+            détail soit une expression
+            authentique de votre personnalité.</p>
+    </div>
+
+    <div class="box">
+        <h3 class="top20">Exécution Impeccable</h3> 
+        <p>Nous nous engageons à fournir des
+            résultats exceptionnels. Notre équipe
+            supervise chaque étape du
+            processus, de la conception initiale à
+            l'installation finale</p>
+    </div>
+</section>
+<!-- Devis gratuit -->
+<section class="flex container top100">
+    <div class="devis width48 ">
+
+        <h2>Nous créons l art
+            De la vie élégante</h2>
+        <p>ransformez votre maison en un espace élégant
+            et fonctionnel avec nos services de design
+            résidentiel sur mesure.</p>
+
+            <div>
+                <img src="assets/Call.png" alt="">
+                <p>012345678</p>
+                <p>Apellez-nous n’importe quand</p>
+                <a href="" class="btn">Obtenez un devis gratuit ➜</a>
+            </div>
+    </div>
+    <img src="assets/image-article.jpg" alt="" class="width48 imgDevis">
+</section>
 
 </main>
 </body>
