--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interno</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <!-- HEADER -->
     <header class="flex spaceBetween container alignCenter top20">
 
-    <a href="" class="logo">
-        <img src="assets/Logo.png" alt="Logo du site" class="Logo">
-    </a>
+        <a href="" class="logo">
+            <img src="assets/Logo.png" alt="Logo du site" class="Logo">
+        </a>
 
         <nav class="menu">
             <ul class="flex spaceBetween">
@@ -26,64 +28,146 @@
 
     <!-- MAIN -->
     <main>
-    <!-- SECTION HERO -->
-    <section class="hero">
-        <div class="container top100">
-            <h1>Rendez votre maison unique</h1>
-            <p>Nous croyons que chaque espace a le potentiel d'être exceptionnel</p>
-            <a href="" class="btn">Construisez votre projet ➜</a>
-        </div>
-    </section>
-
-    <section class="flex spaceBetween container top100">
         <!-- SECTION HERO -->
-        <div class="box">
-            <h3 class="top20">vision</h3>
-            <p>Notre processus commence par
-                comprendre votre vision. Nous
-                écoutons attentivement vos idées, vos
-                rêves et vos besoins pour créer un
-                design qui vous correspond.</p>
-    </div>
+        <section class="hero">
+            <div class="container top100">
+                <h1>Rendez votre maison unique</h1>
+                <p>Nous croyons que chaque espace a le potentiel d'être exceptionnel</p>
+                <a href="" class="btn">Construisez votre projet ➜</a>
+            </div>
+        </section>
 
-    <div class="box">
-        <h3 class="top20">Créativité</h3> 
-        <p>Notre équipe de designers explore
-            des concepts uniques pour chaque
-            projet, en veillant à ce que chaque
-            détail soit une expression
-            authentique de votre personnalité.</p>
-    </div>
+        <section class="flex spaceBetween container top100">
+            <!-- SECTION HERO -->
+            <div class="box">
+                <h3 class="top20">vision</h3>
+                <p>Notre processus commence par
+                    comprendre votre vision. Nous
+                    écoutons attentivement vos idées, vos
+                    rêves et vos besoins pour créer un
+                    design qui vous correspond.</p>
+            </div>
 
-    <div class="box">
-        <h3 class="top20">Exécution Impeccable</h3> 
-        <p>Nous nous engageons à fournir des
-            résultats exceptionnels. Notre équipe
-            supervise chaque étape du
-            processus, de la conception initiale à
-            l'installation finale</p>
-    </div>
-</section>
-<!-- Devis gratuit -->
-<section class="flex container top100">
-    <div class="devis width48 ">
+            <div class="box">
+                <h3 class="top20">Créativité</h3>
+                <p>Notre équipe de designers explore
+                    des concepts uniques pour chaque
+                    projet, en veillant à ce que chaque
+                    détail soit une expression
+                    authentique de votre personnalité.</p>
+            </div>
 
-        <h2>Nous créons l art
-            De la vie élégante</h2>
-        <p>ransformez votre maison en un espace élégant
-            et fonctionnel avec nos services de design
-            résidentiel sur mesure.</p>
+            <div class="box">
+                <h3 class="top20">Exécution Impeccable</h3>
+                <p>Nous nous engageons à fournir des
+                    résultats exceptionnels. Notre équipe
+                    supervise chaque étape du
+                    processus, de la conception initiale à
+                    l'installation finale</p>
+            </div>
+        </section>
+        <!-- Devis gratuit -->
+        <section class="flex spaceBetween container top100">
+            <div class="devis width48">
 
-            <div>
-                <img src="assets/Call.png" alt="">
-                <p>012345678</p>
-                <p>Apellez-nous n’importe quand</p>
+                <h2>Nous créons l art
+                    De la vie élégante</h2>
+                <p class="top20">ransformez votre maison en un espace élégant
+                    et fonctionnel avec nos services de design
+                    résidentiel sur mesure.</p>
+
+                <div class="flex alignCenter">
+                    <div class="btnCall"><img src="assets/Call.png" alt=""></div>
+                    <div>
+                        <p class="Gras">012345678</p>
+                        <p>Apellez-nous n’importe quand</p>
+                    </div>
+                </div>
                 <a href="" class="btn">Obtenez un devis gratuit ➜</a>
             </div>
-    </div>
-    <img src="assets/image-article.jpg" alt="" class="width48 imgDevis">
-</section>
+            <img src="assets/image-article.jpg" alt="" class="width48 imgDevis">
+        </section>
 
-</main>
+        <section class="top100 bgcS ptb64">
+            <div class="container">
+                <div class="top20">
+                    <h3>Ils nous ont fait confiance</h3>
+                    <div class="flex spaceBetween alignCenter top20">
+                        <div class="box carte">
+                            <div class="flex">
+                                <img src="assets/user3.png" alt="" class="imgUser">
+                                <div>
+                                    <p>Nattasha Mith</p>
+                                    <p>Lyon</p>
+                                </div>
+                            </div>
+
+                            <p>J'ai eu le plaisir de travailler
+                                avec Interno sur la rénovation
+                                complète de ma maison, et je
+                                suis extrêmement satisfaite du
+                                résultat !</p>
+                        </div>
+                        <div class="box carte">
+                            <div class="flex">
+                                <img src="assets/user2.png" alt="" class="imgUser">
+                                <div>
+                                    <p>Mary Galario</p>
+                                    <p>Agen</p>
+                                </div>
+                            </div>
+
+                            <p>Nous avons fait appel à leur
+                                équipe pour concevoir
+                                l'intérieur de notre nouveau
+                                bureau, et le résultat est
+                                incroyable.</p>
+                        </div>
+                        <div class="box carte">
+                            <div class="flex">
+                                <img src="assets/user1.png" alt="" class="imgUser">
+                                <div>
+                                    <p>Benny Roll</p>
+                                    <p>Paris</p>
+                                </div>
+                            </div>
+
+                            <p>Une expérience formidable !
+                                Une équipe de designers
+                                talentueuse mais également
+                                très à l'écoute des besoins du
+                                client</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+        <section class="flex spaceBetween alignCenter container top100">
+
+            <a href=""><img src="assets/moderne-home.png" alt=""></a>
+            <a href=""><img src="assets/vintage.png" alt=""></a>
+            <a href=""><img src="assets/brand.png" alt=""></a>
+            <a href=""><img src="assets/nature-home.png" alt=""></a>
+            <a href=""><img src="assets/classic-design.png" alt=""></a>
+
+        </section>
+
+        <section class="">
+            <h2></h2>
+            <p></p>
+            <div>
+                <img src="assets/cuisine.jpg" alt="">
+                <div>
+                    <h3></h3>
+                    <p></p>
+                    <a href=""><img src="assets/pngtree-right-arrow-image_1129437.jpg" alt=""></a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
