--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
         <!-- Devis gratuit -->
         <section class="flex spaceBetween container top100">
-            <div class="devis width48">
+            <div class="width48">
 
                 <h2>Nous créons l art
                     De la vie élégante</h2>
@@ -90,8 +90,8 @@
 
         <section class="top100 bgcS ptb64">
             <div class="container">
-                <div class="top20">
-                    <h3>Ils nous ont fait confiance</h3>
+                <div class="top20 textCenter">
+                    <h2>Ils nous ont fait confiance</h2>
                     <div class="flex spaceBetween alignCenter top20">
                         <div class="box carte">
                             <div class="flex">
@@ -155,18 +155,96 @@
 
         </section>
 
-        <section class="">
-            <h2></h2>
-            <p></p>
-            <div>
-                <img src="assets/cuisine.jpg" alt="">
-                <div>
-                    <h3></h3>
-                    <p></p>
-                    <a href=""><img src="assets/pngtree-right-arrow-image_1129437.jpg" alt=""></a>
+        <section class="container">
+            <div class="top100 textCenter">
+                <h2>Nos projets</h2>
+                <p>Explorez notre portfolio pour découvrir l’univers interno.</p>
+            </div>
+
+            <div class="flex spaceBetween">
+                <div class="top60 width48">
+                    <img src="assets/cuisine.jpg" alt="" class="imgP1">
+                    <div class="flex spaceBetween">
+                        <div>
+                            <h3>Cuisine</h3>
+                            <p>Decor / Artchitecture</p>
+                        </div>
+
+                        <div class="btnFleche"><a href="">></a></div>
+                    </div>
+                </div>
+
+                <div class="top60 width48">
+                    <img src="assets/entree-et-garage.jpg" alt="" class="imgP2">
+                    <div class="flex spaceBetween">
+                        <div>
+                            <h3>Entrée et garage</h3>
+                            <p>Decor / Artchitecture</p>
+                        </div>
+
+                        <div class="btnFleche"><a href="">></a></div>
+                    </div>
+                </div>
+
+                <div class="top60 width48">
+                    <img src="assets/bureau-et-chambre.jpg" alt="" class="imgP3">
+                    <div class="flex spaceBetween">
+                        <div>
+                            <h3>Bureau et chambre</h3>
+                            <p>Decor / Artchitecture</p>
+                        </div>
+
+                        <div class="btnFleche"><a href="">></a></div>
+                    </div>
+                </div>
+
+                <div class="top60 width48">
+                    <img src="assets/cabinet-et-salon.jpg" alt="" class="imgP4">
+                    <div class="flex spaceBetween">
+                        <div>
+                            <h3>Cabinet et salon</h3>
+                            <p>Decor / Artchitecture</p>
+                        </div>
+
+                        <div class="btnFleche"><a href="">></a></div>
+                    </div>
                 </div>
             </div>
+
         </section>
+
+        <section class="bgcinput top100">
+            <div class="textCenter">
+                <h2>Rejoignez la communauté interno</h2>
+                <p class="top20">john.doe@gmail.com</p>
+                <input type="email" class="brinput" placeholder="john.doe@gmail.com">
+            </div>
+        </section>
+
+        <footer class="container top100">
+            <div class="flex">
+                <div class="box">
+                    <img src="assets/Logo.png" alt="">
+                    <p>Prêt à tout changer ? Contactez-nous dès
+                        aujourd'hui pour planifier un rendez- vous !</p>
+                    <div class="flex reseaux">
+                        <a href=""><img src="assets/facebook.png" alt=""></a>
+                        <a href=""><img src="assets/twitter.png" alt=""></a>
+                        <a href=""><img src="assets/linkedin.png" alt=""></a>
+                        <a href=""><img src="assets/insta.png" alt=""></a>
+                    </div>
+
+                </div>
+                <div class="box">
+                    <h3>Contact</h3>
+                    <p>55 rue des coquelicots 69000 LYON</p>
+                    <a href="">contact@interno.com</a>
+                    <p>04567890</p>
+                </div>
+            </div>
+            <hr>
+            <p class="textCenter top20">Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</p>
+        </footer>
     </main>
 </body>
 
